# one-layer-deeper

./: .gitignore  PLAN.md  README.md  pyproject.toml  submission_validation.py
.github/workflows/: ci.yml
benchmark/: api.py  runner.py  validation.py
benchmark/manifests/: h100_easy_e1.json  h100_easy_e2.json  h100_easy_e3.json  h100_easy_e4.json  h100_easy_e5.json  h100_medium_m1.json  h100_medium_m2.json  h100_medium_m3.json  h100_medium_m4.json  h100_medium_m5.json
client/: __init__.py  cli.py
data/: __init__.py  config.py  counting.py  factory.py  squaring_mod.py
lab/: act_e1_grid.sh  archive.jsonl  depth_seed_grid.sh  findings.md  gen_medium.sh  make_adaptive.py  make_recurrent.py  make_submission.py  phase2b.sh  queue.md  run_experiment.py  summarize.py  sweep_depth.sh  sweep_depth_medium.sh  sweep_medium_grid.sh  sweep_width.sh  variance_floor.sh
lab/manifests/: lab_e1_long.json  lab_e1_long_s1.json  lab_e1_long_s2.json  lab_m1_long_s1.json  lab_m1_long_s74.json
scripts/: generate_datasets.sh
service/: views.py
submissions/exp_adaptive/ACT_ML32_d128_b0.01_lr0.001/: submission.py
submissions/exp_adaptive/ACT_ML32_d128_b0_lr0.001/: submission.py
submissions/exp_axis/L16_d128_adamw_ce_lr0.001/: submission.py
submissions/exp_axis/L2_d128_adamw_ce_lr0.001/: submission.py
submissions/exp_recur/L16_d128/: submission.py
submissions/recurrent_adamw/: submission.py
submissions/recurrent_lion/: submission.py
submissions/recurrent_muon/: submission.py
tests/: test_cli.py  test_contract.py  test_release.py  test_runner_budget.py  test_tiers.py
(+17 files in other folders)
